feat(testing): add unittest and intergrationtest for repo,services